RESOLVED FIXED25702
Unregister plugins when they are stopped, in Qt port
https://bugs.webkit.org/show_bug.cgi?id=25702
Summary Unregister plugins when they are stopped, in Qt port
Yael
Reported 2009-05-11 12:53:06 PDT
Plugins are registered with PluginMainThreadScheduler when they are started, but in Qt port, they are not unregistered when they are stopped. This can lead to an assertion failure in PluginMainThreadScheduler::registerPlugin if the same address is reused for a new NPP instance.
Attachments
Add call to unregister the plugin when it is stopped (1.40 KB, patch)
2009-05-11 12:55 PDT, Yael
zecke: review+
Yael
Comment 1 2009-05-11 12:55:01 PDT
Created attachment 30200 [details] Add call to unregister the plugin when it is stopped
Holger Freyther
Comment 2 2009-05-11 20:48:07 PDT
Comment on attachment 30200 [details] Add call to unregister the plugin when it is stopped Same fix is needed for Gtk+ :)
Holger Freyther
Comment 3 2009-05-11 22:08:22 PDT
Windows is doing it below the "Clear Window" but I assume it is okay, landed in r43550.
Note You need to log in before you can comment on or make changes to this bug.