2009-05-11  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Holger Freyther.

        Change Qt port to match the mac and windows ports, and unregister plugins when plugins are stopped.
        Not doing that can cause assersion failure.
        https://bugs.webkit.org/show_bug.cgi?id=25702

        * plugins/qt/PluginViewQt.cpp:
        (WebCore::PluginView::stop):

Canonical link: https://commits.webkit.org/35533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43550 268f45cc-cd09-0410-ab3c-d52691b4dbfc